--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		  src: url(font/PoetsenOne.ttf) format('truetype');
 		}
 	</style>
-	<script src="./scripts/v2/poki-sdk.js"></script>
+	<script src="./scripts/v2/poki-sdk-mock.js"></script>
 	<script type="text/javascript" src="scripts/phaser.min.js"></script>
 </head>
 <body>
