--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			height: 100%;
 			min-height: 100vh;
 			min-height: calc(var(--vh, 1vh) * 100);
-			background-image: url('img/cover.png');
+			background-color: #73cdff;
 			overflow: hidden;
 			touch-action: none;
 			-ms-touch-action: none;
