--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 	<title>设计友好报Vol.09——暑假特辑</title>
 	<meta charset="utf-8">
 	<!-- Allow fullscreen mode on iOS devices. (These are Apple specific meta tags.) -->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui, viewport-fit=cover" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui, viewport-fit=cover, interactive-widget=resizes-content" />
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+	<meta name="apple-mobile-web-app-title" content="Emoji Match" />
 	<link rel="apple-touch-icon" sizes="256x256" href="img/icon.png" />
 	<meta name="HandheldFriendly" content="true" />
+	<meta name="format-detection" content="telephone=no" />
+	<meta name="theme-color" content="#73cdff" />
 	
 	<!-- Chrome for Android web app tags -->
 	<meta name="mobile-web-app-capable" content="yes" />
@@ -32,15 +35,21 @@
 			position: relative;
 			margin: 0;
 			padding: 0;
+			-webkit-user-select: none;
+			-moz-user-select: none;
+			-ms-user-select: none;
+			user-select: none;
 		}
 		#game_content {
 			height: 100vh;
 			min-height: calc(var(--vh, 1vh) * 100);
+			width: 100vw;
+			max-width: 100%;
 			display: flex;
 			align-items: center;
 			justify-content: center;
 			position: relative;
-			width: 100%;
+			background-color: #73cdff;
 		}
 		canvas {
 			touch-action-delay: none;
@@ -63,14 +72,43 @@
 	<script src="./scripts/v2/poki-sdk-mock.js"></script>
 	<script type="text/javascript" src="scripts/phaser.min.js"></script>
 	<script type="text/javascript">
-		// 简化的移动端适配脚本
-		function adjustMobileHeight() {
-			// 使用标准viewport高度，不进行动态调整
-			document.documentElement.style.setProperty('--vh', '1vh');
+		// 增强的移动端适配脚本
+		function setViewportHeight() {
+			// 获取真实的视口高度，排除浏览器UI的影响
+			const vh = window.innerHeight * 0.01;
+			document.documentElement.style.setProperty('--vh', `${vh}px`);
 		}
 		
-		// 页面加载时执行
-		window.addEventListener('load', adjustMobileHeight);
+		function preventZoom(e) {
+			// 防止双击缩放
+			if (e.touches.length > 1) {
+				e.preventDefault();
+			}
+		}
+		
+		function handleResize() {
+			setViewportHeight();
+			// 通知 Phaser 游戏调整大小
+			if (window.game && window.game.scale) {
+				window.game.scale.refresh();
+			}
+		}
+		
+		// 初始化视口高度
+		setViewportHeight();
+		
+		// 监听视口变化
+		window.addEventListener('resize', handleResize);
+		window.addEventListener('orientationchange', handleResize);
+		window.addEventListener('load', setViewportHeight);
+		
+		// 添加触摸事件监听，防止意外缩放
+		document.addEventListener('touchstart', preventZoom, { passive: false });
+		document.addEventListener('touchend', preventZoom, { passive: false });
+		
+		// 防止长按选择
+		document.addEventListener('contextmenu', e => e.preventDefault());
+		document.addEventListener('selectstart', e => e.preventDefault());
 	</script>
 </head>
 <body>
