--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<title>设计友好报Vol.09——暑假特辑</title>
 	<meta charset="utf-8">
-	<!-- Allow fullscreen mode on iOS devices. (These are Apple specific meta tags.) -->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui, viewport-fit=cover, interactive-widget=resizes-content" />
+	<!-- 优化的移动端viewport配置 -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, shrink-to-fit=no, viewport-fit=cover, interactive-widget=resizes-content" />
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 	<meta name="apple-mobile-web-app-title" content="Emoji Match" />
@@ -20,9 +20,11 @@
 		* {
 			padding: 0;
 			margin: 0;
+			box-sizing: border-box;
 		}
 		:root {
 			--vh: 1vh;
+			--game-scale: 1;
 		}
 		html, body {
 			height: 100%;
@@ -30,15 +32,16 @@
 			min-height: calc(var(--vh, 1vh) * 100);
 			background-color: #73cdff;
 			overflow: hidden;
-			touch-action: none;
-			-ms-touch-action: none;
-			position: relative;
-			margin: 0;
-			padding: 0;
+			touch-action: manipulation;
+			-ms-touch-action: manipulation;
+			-webkit-touch-callout: none;
 			-webkit-user-select: none;
+			-khtml-user-select: none;
 			-moz-user-select: none;
 			-ms-user-select: none;
 			user-select: none;
+			-webkit-tap-highlight-color: transparent;
+			font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
 		}
 		#game_content {
 			height: 100vh;
@@ -48,13 +51,64 @@
 			display: flex;
 			align-items: center;
 			justify-content: center;
-			position: relative;
+			position: fixed;
+			top: 0;
+			left: 0;
 			background-color: #73cdff;
+			z-index: 1;
 		}
 		canvas {
-			touch-action-delay: none;
-			touch-action: none;
-			-ms-touch-action: none;
+			touch-action: manipulation;
+			-ms-touch-action: manipulation;
+			display: block;
+			margin: 0 auto;
+			position: relative;
+			max-width: 100vw;
+			max-height: 100vh;
+			border-radius: 0;
+			image-rendering: pixelated;
+			image-rendering: -moz-crisp-edges;
+			image-rendering: crisp-edges;
+		}
+		
+		/* 移动端优化 */
+		@media (max-width: 768px) {
+			html, body {
+				-webkit-text-size-adjust: 100%;
+				-ms-text-size-adjust: 100%;
+			}
+			canvas {
+				width: 100vw !important;
+				height: 100vh !important;
+				max-width: 100vw !important;
+				max-height: 100vh !important;
+			}
+		}
+		
+		/* 平板优化 */
+		@media (min-width: 769px) and (max-width: 1024px) {
+			#game_content {
+				padding: 10px;
+			}
+		}
+		
+		/* 桌面端优化 */
+		@media (min-width: 1025px) {
+			#game_content {
+				padding: 20px;
+			}
+			canvas {
+				border-radius: 8px;
+				box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
+			}
+		}
+		
+		/* 横屏适配 */
+		@media (orientation: landscape) and (max-height: 500px) {
+			#game_content {
+				align-items: flex-start;
+				padding-top: 0;
+			}
 		}
 		@font-face {
 		  font-family: 'robotomono';
@@ -72,43 +126,127 @@
 	<script src="./scripts/v2/poki-sdk-mock.js"></script>
 	<script type="text/javascript" src="scripts/phaser.min.js"></script>
 	<script type="text/javascript">
+		// 设备检测
+		const isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
+		const isIOS = /iPad|iPhone|iPod/.test(navigator.userAgent);
+		const isAndroid = /Android/.test(navigator.userAgent);
+		
 		// 增强的移动端适配脚本
 		function setViewportHeight() {
 			// 获取真实的视口高度，排除浏览器UI的影响
-			const vh = window.innerHeight * 0.01;
+			let vh = window.innerHeight * 0.01;
+			
+			// iOS Safari 特殊处理
+			if (isIOS) {
+				// 修正iOS Safari的视口问题
+				const initialVh = window.screen.height * 0.01;
+				vh = Math.min(vh, initialVh);
+			}
+			
 			document.documentElement.style.setProperty('--vh', `${vh}px`);
+			
+			// 计算游戏缩放比例
+			const gameScale = Math.min(window.innerWidth / 375, window.innerHeight / 812);
+			document.documentElement.style.setProperty('--game-scale', gameScale);
 		}
 		
 		function preventZoom(e) {
 			// 防止双击缩放
-			if (e.touches.length > 1) {
+			if (e.touches && e.touches.length > 1) {
 				e.preventDefault();
 			}
 		}
 		
-		function handleResize() {
-			setViewportHeight();
-			// 通知 Phaser 游戏调整大小
-			if (window.game && window.game.scale) {
-				window.game.scale.refresh();
+		function preventDoubleTapZoom(e) {
+			// 防止双击缩放
+			let lastTouchEnd = 0;
+			e.preventDefault();
+			const now = (new Date()).getTime();
+			if (now - lastTouchEnd <= 300) {
+				e.preventDefault();
 			}
+			lastTouchEnd = now;
+		}
+		
+		function handleResize() {
+			// 延迟处理，确保浏览器完成渲染
+			setTimeout(() => {
+				setViewportHeight();
+				// 通知 Phaser 游戏调整大小
+				if (window.game && window.game.scale) {
+					window.game.scale.refresh();
+				}
+			}, 100);
+		}
+		
+		function handleOrientationChange() {
+			// iOS 需要延迟更长时间
+			const delay = isIOS ? 500 : 100;
+			setTimeout(() => {
+				setViewportHeight();
+				if (window.game && window.game.scale) {
+					window.game.scale.refresh();
+				}
+			}, delay);
 		}
 		
 		// 初始化视口高度
 		setViewportHeight();
 		
 		// 监听视口变化
-		window.addEventListener('resize', handleResize);
-		window.addEventListener('orientationchange', handleResize);
-		window.addEventListener('load', setViewportHeight);
+		window.addEventListener('resize', handleResize, { passive: true });
+		window.addEventListener('orientationchange', handleOrientationChange, { passive: true });
+		window.addEventListener('load', setViewportHeight, { passive: true });
 		
-		// 添加触摸事件监听，防止意外缩放
-		document.addEventListener('touchstart', preventZoom, { passive: false });
-		document.addEventListener('touchend', preventZoom, { passive: false });
+		// 移动端特殊处理
+		if (isMobile) {
+			// 防止缩放
+			document.addEventListener('touchstart', preventZoom, { passive: false });
+			document.addEventListener('touchmove', preventZoom, { passive: false });
+			document.addEventListener('touchend', preventDoubleTapZoom, { passive: false });
+			
+			// 防止页面滚动
+			document.addEventListener('touchmove', function(e) {
+				if (e.target.tagName !== 'CANVAS') {
+					e.preventDefault();
+				}
+			}, { passive: false });
+			
+			// iOS 特殊处理
+			if (isIOS) {
+				// 禁用弹性滚动
+				document.addEventListener('touchstart', function(e) {
+					if (e.touches.length === 1) {
+						const startY = e.touches[0].clientY;
+						e.currentTarget.addEventListener('touchmove', function(moveEvent) {
+							if (moveEvent.touches.length === 1) {
+								const currentY = moveEvent.touches[0].clientY;
+								if (startY < currentY) {
+									moveEvent.preventDefault();
+								}
+							}
+						}, { passive: false });
+					}
+				}, { passive: true });
+			}
+		}
 		
-		// 防止长按选择
+		// 防止右键菜单和选择
 		document.addEventListener('contextmenu', e => e.preventDefault());
 		document.addEventListener('selectstart', e => e.preventDefault());
+		document.addEventListener('dragstart', e => e.preventDefault());
+		
+		// 页面可见性变化处理
+		document.addEventListener('visibilitychange', function() {
+			if (!document.hidden && window.game) {
+				// 页面重新可见时刷新游戏
+				setTimeout(() => {
+					if (window.game.scale) {
+						window.game.scale.refresh();
+					}
+				}, 100);
+			}
+		});
 	</script>
 </head>
 <body>
