--- a/index.html
+++ b/index.html
@@ -106,17 +106,25 @@
 		@media (min-width: 769px) and (max-width: 1024px) {
 			#game_content {
 				padding: 10px;
+				background-color: transparent;
+			}
+			canvas {
+				max-width: 90vw;
+				max-height: 95vh;
 			}
 		}
 		
 		/* 桌面端优化 */
 		@media (min-width: 1025px) {
 			#game_content {
-				padding: 20px;
+				padding: 10px;
+				background-color: transparent;
 			}
 			canvas {
 				border-radius: 8px;
 				box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
+				max-width: 80vw;
+				max-height: 90vh;
 			}
 		}
 		
