修复桌面端显示：使用更大固定尺寸(600x900)，统一背景色，消除黑屏问题

--- a/index.html
+++ b/index.html
@@ -106,11 +106,7 @@
 		@media (min-width: 769px) and (max-width: 1024px) {
 			#game_content {
 				padding: 10px;
-				background-color: transparent;
-			}
-			canvas {
-				max-width: 90vw;
-				max-height: 95vh;
+				background-color: #73cdff;
 			}
 		}
 		
@@ -118,13 +114,11 @@
 		@media (min-width: 1025px) {
 			#game_content {
 				padding: 10px;
-				background-color: transparent;
+				background-color: #73cdff;
 			}
 			canvas {
 				border-radius: 8px;
 				box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
-				max-width: 80vw;
-				max-height: 90vh;
 			}
 		}
 		
