--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
 			display: block;
 			margin: 0 auto;
 			position: relative;
+			width: 100% !important;
+			height: 100% !important;
 			max-width: 100vw;
 			max-height: 100vh;
 			border-radius: 0;
@@ -113,12 +115,18 @@
 		/* 桌面端优化 */
 		@media (min-width: 1025px) {
 			#game_content {
-				padding: 10px;
+				padding: 20px;
 				background-color: #73cdff;
+				width: 100vw;
+				height: 100vh;
 			}
 			canvas {
 				border-radius: 8px;
 				box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
+				width: auto !important;
+				height: auto !important;
+				max-width: 80vw;
+				max-height: 90vh;
 			}
 		}
 		
