--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="apple-touch-icon" sizes="256x256" href="img/icon.png" />
 	<meta name="HandheldFriendly" content="true" />
 	<meta name="format-detection" content="telephone=no" />
-	<meta name="theme-color" content="#73cdff" />
+	<meta name="theme-color" content="#30a8ff" />
 	
 	<!-- Chrome for Android web app tags -->
 	<meta name="mobile-web-app-capable" content="yes" />
@@ -30,7 +30,7 @@
 			height: 100%;
 			min-height: 100vh;
 			min-height: calc(var(--vh, 1vh) * 100);
-			background-color: #73cdff;
+			background-color: #30a8ff;
 			overflow: hidden;
 			touch-action: manipulation;
 			-ms-touch-action: manipulation;
@@ -54,7 +54,7 @@
 			position: fixed;
 			top: 0;
 			left: 0;
-			background-color: #73cdff;
+			background-color: #30a8ff;
 			z-index: 1;
 		}
 		canvas {
@@ -80,12 +80,16 @@
 				min-height: calc(var(--vh, 1vh) * 100) !important;
 				padding: 0 !important;
 				margin: 0 !important;
+				overflow: hidden;
 			}
 			canvas {
-				width: 100vw !important;
-				height: 100vh !important;
+				max-width: 100vw !important;
+				max-height: 100vh !important;
+				width: auto !important;
+				height: auto !important;
 				image-rendering: auto;
 				image-rendering: high-quality;
+				object-fit: contain;
 			}
 		}
 		
@@ -102,7 +106,7 @@
 		@media (min-width: 769px) and (max-width: 1024px) {
 			#game_content {
 				padding: 10px;
-				background-color: #73cdff;
+				background-color: #30a8ff;
 			}
 		}
 		
@@ -110,7 +114,7 @@
 		@media (min-width: 1025px) {
 			#game_content {
 				padding: 20px;
-				background-color: #73cdff;
+				background-color: #30a8ff;
 			}
 			canvas {
 				border-radius: 8px;
