--- a/index.html
+++ b/index.html
@@ -110,15 +110,21 @@
 			}
 		}
 		
-		/* 桌面端优化 */
+		/* 桌面端优化 - 保持手机端比例 */
 		@media (min-width: 1025px) {
 			#game_content {
 				padding: 20px;
 				background-color: #30a8ff;
+				/* 确保游戏窗口居中显示 */
+				width: 100vw;
+				height: 100vh;
 			}
 			canvas {
-				border-radius: 8px;
-				box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
+				border-radius: 12px;
+				box-shadow: 0 8px 32px rgba(0, 0, 0, 0.25);
+				/* 限制最大宽度，保持手机比例 */
+				max-width: 450px !important;
+				max-height: 900px !important;
 			}
 		}
 		
