修复emoji矩阵边距问题：确保严格30px左右边距，等比缩小emoji尺寸，修复网页端强制竖屏显示

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 			}
 		}
 		
-		/* 桌面端优化 - 保持手机端比例 */
+		/* 桌面端优化 - 强制竖屏比例 */
 		@media (min-width: 1025px) {
 			#game_content {
 				padding: 20px;
@@ -118,13 +118,23 @@
 				/* 确保游戏窗口居中显示 */
 				width: 100vw;
 				height: 100vh;
+				display: flex;
+				align-items: center;
+				justify-content: center;
 			}
 			canvas {
 				border-radius: 12px;
 				box-shadow: 0 8px 32px rgba(0, 0, 0, 0.25);
-				/* 限制最大宽度，保持手机比例 */
-				max-width: 450px !important;
-				max-height: 900px !important;
+				/* 强制竖屏比例，最大宽度420px，保持9:16比例 */
+				max-width: 420px !important;
+				max-height: calc(420px * 16 / 9) !important;
+				/* 确保不会超出视口 */
+				max-height: min(calc(420px * 16 / 9), 90vh) !important;
+				width: auto !important;
+				height: auto !important;
+				/* 保持宽高比 */
+				aspect-ratio: 9/16 !important;
+				object-fit: contain;
 			}
 		}
 		
