--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 			}
 		}
 		
-		/* 桌面端优化 - 强制竖屏比例 */
+		/* 桌面端优化 - 竖屏比例显示 */
 		@media (min-width: 1025px) {
 			#game_content {
 				padding: 20px;
@@ -125,15 +125,12 @@
 			canvas {
 				border-radius: 12px;
 				box-shadow: 0 8px 32px rgba(0, 0, 0, 0.25);
-				/* 强制竖屏比例，最大宽度420px，保持9:16比例 */
-				max-width: 420px !important;
-				max-height: calc(420px * 16 / 9) !important;
-				/* 确保不会超出视口 */
-				max-height: min(calc(420px * 16 / 9), 90vh) !important;
+				/* 竖屏比例，合理的最大尺寸 */
+				max-width: 500px !important;
+				max-height: 90vh !important;
+				/* 确保竖屏比例 */
 				width: auto !important;
 				height: auto !important;
-				/* 保持宽高比 */
-				aspect-ratio: 9/16 !important;
 				object-fit: contain;
 			}
 		}
