--- a/index.html
+++ b/index.html
@@ -160,6 +160,12 @@
 		}
 	</style>
 	<script src="./scripts/v2/poki-sdk-mock.js"></script>
+	<!-- Firebase SDK -->
+	<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+	<!-- Firebase 配置和初始化 -->
+	<script type="text/javascript" src="scripts/firebase-config.js"></script>
+	<script type="text/javascript" src="scripts/leaderboard.js"></script>
 	<script type="text/javascript" src="scripts/phaser.min.js"></script>
 	<script type="text/javascript">
 		// 设备检测
