--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@
 	<script type="text/javascript" src="scripts/boot.js"></script>
 	<script type="text/javascript" src="scripts/stages.js"></script>
 	<script type="text/javascript" src="scripts/preload.js"></script>
+	<script type="text/javascript" src="scripts/name.js"></script>
 	<script type="text/javascript" src="scripts/menu.js"></script>
 	<script type="text/javascript" src="scripts/game.js"></script>
 </body>
