完善排行榜功能和UI设计
主要更新：
- 新增排行榜界面素材：leaderboard_bg.png, leaderboard_title.png, btn_close.png, btn_rink.png
- 添加fzltjh.TTF字体文件并应用到排行榜
- 重新设计排行榜布局：40x40px排名方块 + 300x40px信息条目
- 实现前三名特殊颜色：金色、银色、铜色配色方案
- 优化排行榜滑动功能和遮罩显示
- 修复排行榜关闭按钮功能
- 移除等级信息，简化显示内容
- 调整标题位置和各元素间距

--- a/index.html
+++ b/index.html
@@ -158,6 +158,12 @@
 		  font-weight: 400;
 		  src: url(font/PoetsenOne.ttf) format('truetype');
 		}
+		@font-face {
+		  font-family: 'fzltjh';
+		  font-style: normal;
+		  font-weight: 400;
+		  src: url(font/fzltjh.TTF) format('truetype');
+		}
 	</style>
 	<script src="./scripts/v2/poki-sdk-mock.js"></script>
 	<!-- Firebase SDK -->
