优化name界面和排行榜功能
- 在name界面添加header和footer装饰
- 移除name界面的跳过按钮，强制用户填写昵称
- 移除游戏页面的调试按钮
- 添加昵称记录清除工具页面
- 优化排行榜界面布局和关闭功能
- 更新排行榜按钮素材和样式

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
 	<title>设计友好报Vol.09——暑假特辑</title>
 	<meta charset="utf-8">
@@ -164,6 +164,8 @@
 		  font-weight: 400;
 		  src: url(font/fzltjh.TTF) format('truetype');
 		}
+		
+
 	</style>
 	<script src="./scripts/v2/poki-sdk-mock.js"></script>
 	<!-- Firebase SDK -->
@@ -307,5 +309,44 @@
 	<script type="text/javascript" src="scripts/name.js"></script>
 	<script type="text/javascript" src="scripts/menu.js"></script>
 	<script type="text/javascript" src="scripts/game.js"></script>
+	<script type="text/javascript">
+		// 游戏数据
+		var game_data = {
+			sound: true,
+			music: true
+		};
+
+		var player_data = {
+			score: 0,
+			level: 1,
+			hint_left: 5,
+			shuffle_left: 5,
+			drop_mode: 0
+		};
+
+
+
+		// Phaser游戏配置
+		var config = {
+			type: Phaser.AUTO,
+			width: window.innerWidth,
+			height: window.innerHeight,
+			parent: 'game_content',
+			backgroundColor: '#30a8ff',
+			scale: {
+				mode: Phaser.Scale.RESIZE,
+				autoCenter: Phaser.Scale.CENTER_BOTH
+			},
+			scene: [Boot, Load, Menu, Name, Game, Stages]
+		};
+
+		// 启动游戏
+		var game = new Phaser.Game(config);
+
+		// 窗口大小改变时重新调整游戏尺寸
+		window.addEventListener('resize', function() {
+			game.scale.resize(window.innerWidth, window.innerHeight);
+		});
+	</script>
 </body>
 </html>
