修改网页标题：设计友好报Vol.09——暑假特辑 → EMOJI FIGHT

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-	<title>设计友好报Vol.09——暑假特辑</title>
+	<title>EMOJI FIGHT</title>
 	<meta charset="utf-8">
 	<!-- 优化的移动端viewport配置 -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, shrink-to-fit=no, viewport-fit=cover, interactive-widget=resizes-content" />
