修复数据丢失问题和增强数据检查功能
1. 增加存储容量：maxEntries 50→200条记录
2. 优化清理工具：
   - 添加田中记录专项搜索
   - 添加高分记录筛选(≥120分)
   - 增强数据预览和排查功能
3. 防止高分记录被误删除

--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
 	<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 	<!-- Firebase 配置和初始化 -->
-	<script type="text/javascript" src="scripts/firebase-config.js"></script>
-	<script type="text/javascript" src="scripts/leaderboard.js"></script>
+	<script type="text/javascript" src="scripts/firebase-config.js?v=1.1"></script>
+	<script type="text/javascript" src="scripts/leaderboard.js?v=1.1"></script>
 	<script type="text/javascript" src="scripts/phaser.min.js"></script>
 	<script type="text/javascript">
 		// 设备检测
@@ -307,7 +307,7 @@
 	<script type="text/javascript" src="scripts/stages.js"></script>
 	<script type="text/javascript" src="scripts/preload.js"></script>
 	<script type="text/javascript" src="scripts/name.js"></script>
-	<script type="text/javascript" src="scripts/menu.js"></script>
+	<script type="text/javascript" src="scripts/menu.js?v=1.1"></script>
 	<script type="text/javascript" src="scripts/game.js"></script>
 	<script type="text/javascript">
 		// 游戏数据
